# ActiveWindowsLogger

./: .gitignore  AGENTS.md  ActiveWindowsLogger.sln  ActiveWindowsLogsViewer.epf  LICENSE  README.md  example.csv
.github/workflows/: build.yml
ActiveWindowsLogger/: ActiveWindowsLogger.cpp  ActiveWindowsLogger.rc  ActiveWindowsLogger.vcxproj  ActiveWindowsLogger.vcxproj.filters  Resource.h  SqliteLog.cpp  SqliteLog.h  SystemTray.cpp  SystemTray.h  filter.txt  stdafx.h  utils.cpp  utils.h
ActiveWindowsLogger/logs/: logs_01.08.2022.txt
Viewer/1C/: ActiveWindowsLogsViewer.epf
WinSetup/: ActiveWindowsLogger.msi  ActiveWindowsLogger.wixobj  ActiveWindowsLogger.wixpdb  ActiveWindowsLogger.wxs  make.bat
linux/: CMakeLists.txt  main.cpp  utils.cpp  utils.h  xutils.cpp  xutils.h
logs/: filter.txt
